--- a/samples/hls.html
+++ b/samples/hls.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shaka HLS Play</title>
+    <title>Shaka HLS Player</title>
   <!-- newrelic browser agent. REMEMBER TO REPLACE THIS SCRIPT WITH YOUR OWN BROWSER AGENT -->
   <script type="text/javascript" src="agent.js"></script>
 
@@ -13,7 +13,6 @@
   <!-- shaka -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/shaka-player.compiled.debug.min.js"></script>
 
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/2.2.1/shaka-player.compiled.debug.js"></script> -->
 </head>
 <body>
     <video id="myPlayer" width="640" height="480" crossorigin="anonymous" controls></video>
@@ -34,12 +33,14 @@
       // // source
       var source = 'http://content.jwplatform.com/manifests/vM7nH0Kl.m3u8'
 
+       // Load the source into the Player.
       try {
             window.player = player;
             await player.load(source);
+            // newrelic
             nrvideo.Core.addTracker(new nrvideo.ShakaTracker(player));
           } catch (e) {
-            console.error("Error code", "object", e);
+            nrvideo.Core.sendError(error);
           }
     }
     
