--- a/samples/autoplay.html
+++ b/samples/autoplay.html
@@ -9,18 +9,18 @@
   <script src="../dist/newrelic-video-shaka.min.js"></script>
   <!-- shaka -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/shaka-player.compiled.js"></script>
-  
+  <!-- MSS support only with codem-isoboxer javaScript MP4 (MPEG-4, ISOBMFF) parser -->
   <script defer src="../node_modules/codem-isoboxer/dist/iso_boxer.min.js"></script>
 </head>
 <body>
-  <video id="video" width="640" controls></video>
+  <video id="myPlayer" width="640" height="480" crossorigin="anonymous" controls autoplay></video>
   <script>
     async function initPlayer() {
       // Install polyfills.
       shaka.polyfill.installAll()
 
       // Find the video element.
-      var video = document.getElementById('video')
+      var video = document.getElementById('myPlayer')
 
       // Construct a Player to wrap around it.
       var player = new shaka.Player(video);
@@ -28,11 +28,13 @@
       // source
       var source = 'https://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest';
 
+      // Load the source into the Player.
       try {
             await player.load(source);
+            // newrelic
             nrvideo.Core.addTracker(new nrvideo.ShakaTracker(player));
-          } catch (e) {
-            console.error("Error code", "object", e);
+          } catch (error) {
+            nrvideo.Core.sendError(error)
           }
     }
     
