--- a/samples/dash.html
+++ b/samples/dash.html
@@ -24,7 +24,7 @@
         shaka.polyfill.installAll();
 
         // Find the video element.
-        var video = document.getElementById("myPlayer");
+        var video = document.getElementById('myPlayer');
 
         // Construct a Player to wrap around it.
 
@@ -34,7 +34,7 @@
         window.player = player;
 
         // source
-        var source = "https://turtle-tube.appspot.com/t/t2/dash.mpd";
+        var source = 'https://turtle-tube.appspot.com/t/t2/dash.mpd';
 
         try {
           window.player = player;
@@ -46,7 +46,7 @@
         }
       }
 
-      document.addEventListener("DOMContentLoaded", initPlayer);
+      document.addEventListener('DOMContentLoaded', initPlayer);
     </script>
   </body>
 </html>
