--- a/samples/hls.html
+++ b/samples/hls.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shaka HLS Player</title>
     <!-- newrelic browser agent. REMEMBER TO REPLACE THIS SCRIPT WITH YOUR OWN BROWSER AGENT -->
-    <script type="text/javascript" src="agent.js"></script>
+    <!-- <script type="text/javascript" src="agent.js"></script> -->
 
     <!-- newrelic tracker -->
-    <script src="../dist/newrelic-video-shaka.min.js"></script>
+    <script src="../dist/umd/newrelic-video-shaka.min.js"></script>
 
     <!-- shaka -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/shaka-player.compiled.debug.min.js"></script>
@@ -42,10 +42,22 @@
         try {
           window.player = player;
           await player.load(source);
+
+          // const options = {};
+          const options = {
+            info: {
+              beacon: 'staging-bam-cell.nr-data.net',
+              errorBeacon: 'staging-bam-cell.nr-data.net',
+              licenseKey: 'NRBR-28f429b8d172936a29d',
+              applicationID: '248586773',
+              sa: 1,
+            },
+          };
           // newrelic
-          nrvideo.Core.addTracker(new nrvideo.ShakaTracker(player));
+          //nrvideo.Core.addTracker(new nrvideo.ShakaTracker(player));
+          const tracker = new ShakaTracker(player, options);
         } catch (e) {
-          nrvideo.Core.sendError(error);
+          console.error(e.message);
         }
       }
 
