--- a/samples/hls.html
+++ b/samples/hls.html
@@ -46,10 +46,10 @@
           // const options = {};
           const options = {
             info: {
-              beacon: 'staging-bam-cell.nr-data.net',
-              errorBeacon: 'staging-bam-cell.nr-data.net',
-              licenseKey: 'NRBR-28f429b8d172936a29d',
-              applicationID: '248586773',
+              beacon: 'xxxxxxxxxxxxx',
+              errorBeacon: 'xxxxxxxxxxxx',
+              licenseKey: 'xxxxxxxxxxx',
+              applicationID: 'xxxxxxxxx',
               sa: 1,
             },
           };
