--- a/samples/autoplay.html
+++ b/samples/autoplay.html
@@ -33,10 +33,10 @@
         var video = document.getElementById('myPlayer');
         const options = {
           info: {
-            beacon: 'staging-bam-cell.nr-data.net',
-            errorBeacon: 'staging-bam-cell.nr-data.net',
-            licenseKey: 'NRBR-28f429b8d172936a29d',
-            applicationID: '248586773',
+            beacon: 'xxxxxxxxxxxx',
+            errorBeacon: 'xxxxxxxxxxxxx',
+            licenseKey: 'xxxxxxxxxxxxxx',
+            applicationID: 'xxxxxxxx',
             sa: 1,
           },
         };
