--- a/samples/hls.html
+++ b/samples/hls.html
@@ -42,10 +42,17 @@
         try {
           window.player = player;
           await player.load(source);
-          // newrelic
-          nrvideo.Core.addTracker(new nrvideo.ShakaTracker(player));
+          const options = {
+            info: {
+              beacon: 'bam.nr-data.net',
+              licenseKey: 'NRBR-298f449004b949aad61',
+              applicationID: '601579909',
+            },
+          };
+
+          const tracker = new ShakaTracker(player, options);
         } catch (e) {
-          nrvideo.Core.sendError(error);
+          console.error(e.message);
         }
       }
 
