fix: Update options in sample file

--- a/samples/dash.html
+++ b/samples/dash.html
@@ -40,9 +40,9 @@
 
           const options = {
             info: {
-              beacon: 'bam.nr-data.net',
-              licenseKey: 'NRBR-298f449004b949aad61',
-              applicationID: '601579909',
+              beacon: 'xxxxxxxxxxx',
+              licenseKey: 'xxxxxxxxxxx',
+              applicationID: 'xxxxxxxxxxxx',
             },
           };
 
