--- a/samples/autoplay.html
+++ b/samples/autoplay.html
@@ -44,9 +44,9 @@
           // newrelic
           const options = {
             info: {
-              beacon: 'bam.nr-data.net',
-              licenseKey: 'NRBR-298f449004b949aad61',
-              applicationID: '601579909',
+              beacon: 'xxxxxxxxxxx',
+              licenseKey: 'xxxxxxxxxxx',
+              applicationID: 'xxxxxxxxxxxx',
             },
           };
 
