fix: content bitrate issue fixed

--- a/samples/hls.html
+++ b/samples/hls.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="agent.js"></script>
 
     <!-- newrelic tracker -->
-    <script src="../dist/newrelic-video-shaka.min.js"></script>
+    <script src="../dist/umd/newrelic-video-shaka.min.js"></script>
 
     <!-- shaka -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/shaka-player/4.11.2/shaka-player.compiled.debug.min.js"></script>
@@ -44,11 +44,13 @@
           await player.load(source);
           const options = {
             info: {
-              beacon: 'xxxxxxxxxxx',
-              licenseKey: 'xxxxxxxxxxx',
+              beacon: 'xxxxxxxxxxxx',
               applicationID: 'xxxxxxxxxxxx',
+              licenseKey: 'xxxxxxxxxxxx',
             },
           };
+
+          // Initialize your player with new relic Tracker to send data
 
           const tracker = new ShakaTracker(player, options);
         } catch (e) {
